package activity;

public abstract class Activity {
    protected String description;

}
