package activity;

import java.time.LocalTime;


public abstract class SchoolActivity extends Activity {
    protected String venue;
    protected LocalTime startTime;
    protected LocalTime endTime;
}
